# fbot_sensor_class

./: Cargo.toml  compile_move.sh
.cargo/: config
programas/: knn  sensor_color
src/: knn.rs  main.rs
src/classes/: mod.rs
src/sensors/: fbot_color_sensor.rs  mod.rs
