[package]
name = "sensor_color"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "knn"
path = "src/knn.rs"

[profile.release]
lto = true

[dependencies]
rand = "0.8.5"
ev3dev-lang-rust = "0.12.0"

csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "3.1.15", features = ["derive"] }